fix: mobile adaptive

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="pop_up__description">
                         Нажимая «Отправить», Вы соглашаетесь с политикой обработки персональных данных
                     </div>
-                    <input type="submit" class="pop_up_form__submit">
+                    <input type="submit" class="pop_up_form__submit intro__button">
                 </form>
             </div>
 
@@ -536,10 +536,7 @@
                         <a href="#4">Запросить цены</a>
                     </div>
                 </div>
-                <!-- <div class="banner-parts__pic">
-                    <img src="./assets/desktop/banner-parts.png" alt="banner-parts">
-                </div> -->
-
+                
             </section>
         </div>
         <div class="wrapper">
