feat: add fonts tablet adaptive

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="thanks_wrapper">
             <div class="thanks_title">Спасибо за вашу заявку!</div>
             <div class="thanks_text">Наш специалист перезвонит вам в ближайшее время</div>
-            <div class="thanks_link ">
+            <div class="thanks_link intro__button">
                 <a href="#4">Хорошо</a>
             </div>
         </div>
@@ -317,7 +317,7 @@
                 <div class="delivery__content">
                     <div class="delivery__title title">Оплата и доставка</div>
                     <div class="delivery__text">
-                        <p><span>Оплата осуществляется в безналичным способом в порядке предоплаты.</span>
+                        <p><span>Оплата осуществляется безналичным способом в порядке предоплаты.</span>
                         </p>
                         <p><span>Возможны варианты с отсрочкой платежа.</span></p>
 
